# Nyc_Taxi_Incremental_Load_AWS

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: dev.yaml
data/_state/: watermark.json
infra/envs/dev/: main.tf
scripts/: explore_parquet.py
src/nyc_taxi.egg-info/: PKG-INFO  SOURCES.txt
src/nyc_taxi/common/: config.py  watermark.py
