[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nyc-taxi"
version = "0.1.0"
description = "NYC Taxi incremental lakehouse pipeline (Bronze/Silver/Gold) on AWS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
